[gd_scene load_steps=7 format=2]

[ext_resource path="res://title screens/buttons/newGameButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://title screens/buttons/ExitButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://title screens/buttons/settingsButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://icons/header.png" type="Texture" id=4]
[ext_resource path="res://fade_in/FadeIn Transition.tscn" type="PackedScene" id=5]
[ext_resource path="res://title_screen.gd" type="Script" id=6]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 80.0
margin_top = 80.0
margin_right = 1840.0
margin_bottom = 1000.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo " type="TextureRect" parent="Menu"]
margin_right = 1920.0
margin_bottom = 200.0
texture = ExtResource( 4 )

[node name="centerContainer" type="HBoxContainer" parent="Menu"]
margin_top = 204.0
margin_right = 1920.0
margin_bottom = 920.0
size_flags_vertical = 3

[node name="ButtonContainer" type="VBoxContainer" parent="Menu/centerContainer"]
margin_right = 1920.0
margin_bottom = 716.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="newGameButton" parent="Menu/centerContainer/ButtonContainer" instance=ExtResource( 1 )]
margin_right = 1920.0
margin_bottom = 170.0
rect_min_size = Vector2( 0, 170 )
focus_mode = 0
enabled_focus_mode = 0

[node name="SettingsButton" parent="Menu/centerContainer/ButtonContainer" instance=ExtResource( 3 )]
margin_top = 190.0
margin_right = 1920.0
margin_bottom = 360.0
rect_min_size = Vector2( 0, 170 )
focus_mode = 0
enabled_focus_mode = 0

[node name="ExitButton" parent="Menu/centerContainer/ButtonContainer" instance=ExtResource( 2 )]
margin_top = 380.0
margin_right = 1920.0
margin_bottom = 550.0
rect_min_size = Vector2( 0, 170 )
focus_mode = 0
enabled_focus_mode = 0

[node name="FadeIn Transition" parent="." instance=ExtResource( 5 )]
visible = false
[connection signal="pressed" from="Menu/centerContainer/ButtonContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="fade_finished" from="FadeIn Transition" to="." method="_on_FadeIn_Transition_fade_finished"]
